[package]
name = "rust-server"
version = "0.1.0"
authors = ["Tarik <tarikishaq@hotmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
uuid = { version = "0.6.3", features = ["serde", "v4"] }
diesel = { version = "1.0.0", features = ["postgres", "uuid"] }
dotenv = "0.9.0"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json", "uuid"]